# excel-ir-mvp

./: .gitignore  ARCHITECTURE.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DEVLOG_v0.2.md  DEVLOG_v0.3.md  DEVLOG_v0.4.md  DEVLOG_v0.5.md  DEVLOG_v0.6.md  DEVLOG_v0.7.md  DEVLOG_v0.8.md  DEVLOG_v0.9.md  DEVLOG_v1.0.md  DEVLOG_v1.1.md  DEVLOG_v1.2.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  RELEASE_v1.3.md  RELEASE_v1.4.md  RELEASE_v1.5.md  RELEASE_v1.6.md  RELEASE_v1.7.md  RELEASE_v1.8.md  RELEASE_v1.9.md  RELEASE_v2.0.0a0.md  RELEASE_v2.0.0a1.md  RELEASE_v2.0.0a10.md  RELEASE_v2.0.0a11.md  RELEASE_v2.0.0a12.md  RELEASE_v2.0.0a13.md  RELEASE_v2.0.0a14.md  RELEASE_v2.0.0a15.md  RELEASE_v2.0.0a16.md  RELEASE_v2.0.0a17.md  RELEASE_v2.0.0a18.md  RELEASE_v2.0.0a19.md  (+30 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: anonymization.md  backends.md  metadata.md  multi-header-edits.md  native-vs-semantic-tables.md  performance.md  project-structure.md  public-api.md  selective-sheets-compact-ir.md  streaming-edits.md
src/excel_ir_mvp/: __init__.py  __main__.py  api.py  audit_report.py  backends.py  bench.py  corpus_config.json  corpus_runner.py  excel_ir.py  excel_ir_cli.py  excel_ir_plus.py  field_map_review.py  field_map_review_app.py  formula_utils.py  ir.schema.json  ir_patch.py  models.py  types.py  (+2 more)
tests/: conftest.py  fixtures_loader.py  test_excel_ir_mvp.py  test_metadata.py  test_native_tables.py  test_patch_ops.py
tools/: make_multi_header_fixture.py  make_table_fixtures.py
(+9 files in other folders)
