[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-ir-mvp"
version = "2.0.0a13"
description = "MVP for parsing complex Excel reports into IR, semantic patching, and rebuilding XLSX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1"]

[project.scripts]
excel-ir = "excel_ir_mvp.excel_ir_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["excel_ir_mvp*"]

[tool.setuptools.package-data]
excel_ir_mvp = ["*.schema.json", "corpus_config.json"]
